Minor fix for overflowing content

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -61,6 +61,7 @@ main {
     flex: 1;
     padding: 0 1em;
     margin-block: 1em;
+    overflow: auto;
 }
 
 footer {
